<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurfaceViewDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="file">/sdcard/DCIM/100MEDIA/VIDEO0043.mp4</string>
    <string name="play">play</string>
    <string name="pasue">pasue</string>
    <string name="replay">replay</string>
    <string name="stop">stop</string>

</resources>
